[gd_scene load_steps=23 format=3 uid="uid://cv1b38h0riay4"]

[ext_resource type="Script" uid="uid://boamen6reb7gk" path="res://scenes/Player/Player.gd" id="1_3ef65"]
[ext_resource type="Shader" uid="uid://b1jv610w4ryxe" path="res://scenes/Player/LensDistortion.gdshader" id="2_qwpdh"]
[ext_resource type="Script" uid="uid://d1ohmfcuu4kti" path="res://scenes/Player/Camera2D.gd" id="3_q7ypj"]
[ext_resource type="AudioStream" uid="uid://bemh1dfxd1b7l" path="res://res/audio/jump1.ogg" id="5_va2dx"]
[ext_resource type="AudioStream" uid="uid://ch8k26eu6c4h1" path="res://res/audio/contact1.ogg" id="6_rpob6"]
[ext_resource type="AudioStream" uid="uid://c5dxdavfddbrp" path="res://res/audio/death1.ogg" id="7_khthc"]
[ext_resource type="AudioStream" uid="uid://7opin6amejv4" path="res://res/audio/roll_loop.ogg" id="8_bn5x6"]
[ext_resource type="Script" uid="uid://dw4jnhytptekq" path="res://scenes/Player/Sprite.gd" id="18_wu17r"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_pk2sw"]
friction = 0.6

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ju427"]
shader = ExtResource("2_qwpdh")
shader_parameter/dispersion = 0.01
shader_parameter/distort = 0.02
shader_parameter/blur_amount = 0.01

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r2koi"]
content_margin_left = 16.0
content_margin_right = 16.0
bg_color = Color(0.913725, 0.937255, 0.92549, 1)
skew = Vector2(0.4, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.105882, 0.121569, 0.168627, 1)
shadow_color = Color(0.105882, 0.121569, 0.168627, 1)
shadow_size = 1
shadow_offset = Vector2(3, 3)

[sub_resource type="CircleShape2D" id="CircleShape2D_tmwe0"]
radius = 25.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hjcw1"]
radius = 23.0

[sub_resource type="Animation" id="Animation_ay27k"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GPUParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_wfnhh"]
resource_name = "die"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GPUParticles2D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"died"],
"method": &"emit_signal"
}]
}

[sub_resource type="Animation" id="Animation_gp65j"]
resource_name = "jump"
length = 0.5
step = 0.05
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0.8, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0.9, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.05, 0.15, 0.2, 0.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0.9, -0.25, 0, 0.25, 0, 0.8, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0.9, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.1, 0.15, 0.25, 0.3, 0.35)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dy76i"]
_data = {
&"RESET": SubResource("Animation_ay27k"),
&"die": SubResource("Animation_wfnhh"),
&"jump": SubResource("Animation_gp65j")
}

[sub_resource type="Gradient" id="Gradient_3rast"]
colors = PackedColorArray(0.803922, 0.0352941, 0.160784, 1, 0.840444, 0, 0.104624, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_aq7ht"]
gradient = SubResource("Gradient_3rast")
width = 5
height = 5
fill_from = Vector2(1, 1)

[sub_resource type="Curve" id="Curve_rmnny"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_u6aw7"]
curve = SubResource("Curve_rmnny")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_gp1r7"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 23.0
direction = Vector3(0, 0, 0)
spread = 48.0
initial_velocity_min = 200.0
initial_velocity_max = 256.0
gravity = Vector3(0, 98, 0)
scale_min = 0.0
alpha_curve = SubResource("CurveTexture_u6aw7")
collision_mode = 1
collision_friction = 0.0
collision_bounce = 0.0

[node name="Player" type="RigidBody2D" groups=["player"]]
physics_material_override = SubResource("PhysicsMaterial_pk2sw")
contact_monitor = true
max_contacts_reported = 3
script = ExtResource("1_3ef65")
SPEED = 1562
trampoline_bounce_amt = 1000
jump_slow_factor = 0.574

[node name="Camera2D" type="Camera2D" parent="."]
top_level = true
script = ExtResource("3_q7ypj")
move_speed = 0.281

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]
layer = 0

[node name="ColorRect" type="ColorRect" parent="Camera2D/CanvasLayer"]
material = SubResource("ShaderMaterial_ju427")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -49.0
offset_top = -50.0
offset_right = 51.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Time" type="Label" parent="Camera2D"]
unique_name_in_owner = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_top = 116.0
offset_right = 40.0
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.105882, 0.121569, 0.168627, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_r2koi")
text = "000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_tmwe0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_hjcw1")

[node name="Sprite" type="Node2D" parent="."]
script = ExtResource("18_wu17r")
radius = 23.0
color = Color(0.839216, 0.270588, 0.270588, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_dy76i")
}

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
emitting = false
amount = 256
texture = SubResource("GradientTexture2D_aq7ht")
one_shot = true
process_material = SubResource("ParticleProcessMaterial_gp1r7")

[node name="RayCast2D" type="RayCast2D" parent="."]
top_level = true
target_position = Vector2(0, 35)

[node name="JumpAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_va2dx")
bus = &"SoundEffects"

[node name="ContactAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_rpob6")
volume_db = 1.0
bus = &"SoundEffects"

[node name="DeathAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_khthc")
volume_db = 1.0
bus = &"SoundEffects"

[node name="RollingTheyBoulder" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_bn5x6")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_shape_entered" from="Area2D" to="." method="_on_area_2d_body_shape_entered"]
[connection signal="body_shape_exited" from="Area2D" to="." method="_on_area_2d_body_shape_exited"]
